--- a/xen/drivers/char/Kconfig
+++ b/xen/drivers/char/Kconfig
@@ -45,6 +45,15 @@ config HAS_IMX8QM
 	  This selects the NXP i.MX8QM LPUART. If you have a NXP i.MX8QM
 	  based board, say Y.
 
+# NXP i.MX8 UART support
+config HAS_IMX8MM
+	bool "i.MX8MM UART"
+	default n
+	depends on ARM_64
+	help
+	  This selects the NXP i.MX8MM LPUART. If you have a NXP i.MX8MM
+	  based board, say Y.
+
 # Samsung Exynos 4210 UART support
 config HAS_EXYNOS4210
 	bool "Samsung Exynos 4210 UART driver"
